added a 'e' in generate

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <img id="layer3" src="./static/assets/wave2.svg" alt="">
     </div>
     <section class="table-section">
-      <h4>Enter the following details for generating the Halls and Seating arrangements.<br>Make sure you enter for each date and genrate separately!</h4>
+      <h4>Enter the following details for generating the Halls and Seating arrangements.<br>Make sure you enter for each date and generate separately!</h4>
     <form id="timetable-form">
       <label for="subject">Subject:</label>
       <input type="text" id="subject" name="subject"><br>
