added floors image

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       <h1 id="totalhall"></h1>
     </div>
   </section>
+  <section>
+    <h4>TCE FLOOR AND HALLS WITH ROWS AND COLUMNS</h4>
+    <img class="Floor" src="./static/assets/floorhalls.jpg" alt="Floor Halls">
+  </section>
 <footer>
   <nav class="bottom">
     <ul>
