FEW CHANGES MADE

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <li>Enter the starting Register Number for each course. //For eg: 18D001 19D001 20D001</li>
       </ul>
       <div class="apdfbtn">
-      <a href="./seats.html"><button class="btn">Generate Seating Allotment</button></a>
+      <a href="./seats.html" target="_blank"><button class="btn">Generate Seating Allotment</button></a>
     </div>
     </div>
   </section>
