--- a/seats.html
+++ b/seats.html
@@ -99,7 +99,7 @@ document.getElementById("download")
       </py-script>
     </div>
       <div class="pdfpress">
-        <a href="./index.html#front"><button class="pdfbtn btn-primary" id="download">Download PDF</button></a>
+        <button class="pdfbtn btn-primary" id="download">Download PDF</button>
       </div>
 </body>
 </html>
