seating change to one per table

--- a/seats.html
+++ b/seats.html
@@ -50,7 +50,7 @@ document.getElementById("download")
         for i in range(r_r+2): 
             a.append(["X" for j in range(r_c+2)])
         for i in range(r_r+2):
-           b.append(["XXXXXXXX" for j in range(r_c+2)])
+           b.append(["XXXXXXXXXXXXXX" for j in range(r_c+2)])
         # Hall arrangment starts 
      
         for j in range(1,r_c+1): 
